--- a/index.css
+++ b/index.css
@@ -53,8 +53,9 @@ box-shadow: -8px 15px 17px rgba(0, 0, 0, 0.6),
   border-radius: 7px;
   cursor: pointer;
   font-size: 23px;
-  padding: 11px 17px;  
-  margin-left: 4px; 
+  padding: 11px 10px;  
+  margin-left: 7px; 
+  margin-top: 10px;
   color: #fff;
 text-shadow: -1px -1px 0px #44006f;
 background-color: #d20000;
